[Update] Layout, icon and watermark.

--- a/NPCGener_Editor/NPCGener_Editor.csproj
+++ b/NPCGener_Editor/NPCGener_Editor.csproj
@@ -5,6 +5,19 @@
     <TargetFramework>net6.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>sign.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="background.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="sign.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="background.png" />
+  </ItemGroup>
 
 </Project>
